// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component config-save is clickable when config has been changed 1`] = `
<span
  className="button is-primary"
  onClick={[Function]}
>
  <span
    className="icon"
  >
    <i
      className="fa fa-upload"
    />
  </span>
</span>
`;

exports[`component config-save shows loading icon when config is being saved 1`] = `
<span
  className="button is-loading"
>
  <span
    className="icon"
  >
    <i
      className="fa fa-spinner"
    />
  </span>
</span>
`;
